2004-08-11  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AddrEdit.py: setCountry -> set_country
	* src/RelLib.py: Add concept of PrimaryObject
	* src/GrampsDbBase.py: add local constants
	* src/ReadGedcom.py: support new API

2004-08-11  Tim Waugh  <twaugh@redhat.com>
	* src/GrampsDbBase.py: Fixed some missed str()s.

2004-08-11  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Makefile.am: Ship new files: GrampsDbBase.py, GrampsXMLDB.py,
	and GrampsGEDDB.py. 

2004-08-10  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelLib.py: rework of the API
	* src/*.py: rework of the api

2004-08-06  Don Allingham  <dallingham@users.sourceforge.net>
	* various: change try_to_find_*_from_handle to 
	get_*_from_handle

2004-08-05  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AutoComp.py: switch over entirely to ComboBox for
	autocompletion
	* src/GenericFilter.py: support ComboBox
	* src/TransTable.py: sort items on getting keys
	* src/plugins/FilterEditor.py: support ComboBox
	* src/plugins/SoundGen.py: support ComboBox
	* src/plugins/soundex.glade: support ComboBox

2004-08-04  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AttrEdit.py: use ComboBox
	* src/NameEdit.py: use ComboBox
	* src/gramps.glade: use ComboBox
	* src/plugins/ChangeTypes.py: use ComboBox
	* src/plugins/changetype.glade: use ComboBox

2004-08-03  Don Allingham  <dallingham@users.sourceforge.net>
	* src/WriteXML.py: always write the default location for a place
	* src/EditPerson.py: don't for write of multimedia objects if 
	not edited
	* src/ImageSelect.py: don't for write of multimedia objects if 
	not edited
	* src/AutoComp.py: build ListStore for ComboBox and Entry
	* src/AddSpouse.py: use ComboBox
	* src/Marriage.py: use ComboBox
	* src/gramps.glade: Switch from gtk.Combo to gtk.ComboBox and
	gtk.ComboxEntry
	* src/EventEdit.py: handle autocompletion
	* src/RelLib.py: remove cPickle import
	* src/GrampsDbBase.py: fix has_handle functions
