@@ -1,4 +1,6 @@
 2004-08-11  Don Allingham  <dallingham@users.sourceforge.net>
+	* src/GenericFilter.py: fixed find/get_family_from_handle
+	* src/WriteGedcom.py: fixed find/get_family_from_handle
 	* src/AddrEdit.py: setCountry -> set_country
 	* src/RelLib.py: Add concept of PrimaryObject
 	* src/GrampsDbBase.py: add local constants
